[project]
name = "cem-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "pypsa>=0.34.1",
    "pytest>=8.4.0",
    "scipy>=1.15.3",
    "streamlit>=1.45.1",
]
